--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -1,4 +1,6 @@
-{% extends 'posts/base.html' %} {% block content %} {% load static %}
+{% extends 'posts/base.html' %}
+{% block content %}
+{% load static %}
 <div class="content">
 	<div id="main_detail__top">
 		<div id="main_detail__top__back_btn">
@@ -14,7 +16,8 @@
 						<li id="main__detail__top_left__ul__recruit">모집중</li>
 						{% else %}
 						<li id="main__detail__top_left__ul__recruit_finish">모집완료</li>
-						{% endif %} {% for tag in tags %}
+						{% endif %}
+						{% for tag in tags %}
 						<li>{{tag}}</li>
 						{% endfor %}
 					</ul>
@@ -26,11 +29,12 @@
 							<a href="{% url 'users:profile_view' post.user.id %}">
 								{% if post.user.profile_img %}
 								<div class="profile_img">
-									<img src="{{post.user.profile_img.url}}" alt="profile_img" />
+									<img src="{{post.user.profile_img.url}}" alt="profile_img"></img>
 								</div>
 								{% else %}
-								<div class="profile_img"><img src="{% static " img/moco_symbol.png" %}"
-										alt="profile_img" /></div>
+								<div class="profile_img">
+									<img src="{% static " img/moco_symbol.png" %}" alt="profile_img"></img>
+								</div>
 								{% endif %}
 							</a>
 						</span>
@@ -60,7 +64,9 @@
 									<h1>모집완료로 전환하시겠어요?</h1>
 									<h3>⚠️한 번 모집 완료로 전환하면 다시 모집중으로 전환이 불가합니다⚠️</h3>
 									<div class="main_detail__complete_modal__btn_flex">
-										<button class="main_detail__complete_btn" type="submit">네, 전환할게요</button>
+										<button class="main_detail__complete_btn" type="submit">
+											네, 전환할게요
+										</button>
 										<div class="main_detail__complete_modal__cancel_btn">다시 생각해볼게요</div>
 									</div>
 								</div>
@@ -83,7 +89,7 @@
 						</div>
 						<div class="main_detail__delete_revise">
 							<div class="main_detail__delete_revise__dropdown_btn">
-								<i class="fa-solid fa-ellipsis fa-2x" style="color: #bfbfbf"></i>
+								<i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
 							</div>
 							<div class="main_detail__delete_revise__content">
 								<div class="main_detail__revise_btn">
@@ -103,7 +109,9 @@
 												<h1>게시글을 삭제하시겠어요?</h1>
 												<h3>⚠️한번 삭제하면 복구가 불가합니다⚠️</h3>
 												<div class="main_detail__delete_modal__btn_flex">
-													<button class="main_detail__delete_btn" type="submit">삭제할게요</button>
+													<button class="main_detail__delete_btn" type="submit">
+														삭제할게요
+													</button>
 													<div class="main_detail__delete_modal__cancel_btn">다시 생각해볼게요</div>
 												</div>
 											</div>
@@ -117,7 +125,9 @@
 				{% elif not can_revise and post.activation %}
 				<div id="main_detail__top__apply_2">
 					<button id="main_detail__top__apply_btn" type="button"
-						onclick="location.href='{{post.apply_link}}'">지원하기</button>
+						onclick="location.href='{{post.apply_link}}'">
+						지원하기
+					</button>
 					<div class="main_detail__top__like">
 						<button id="{{post.id}}" onclick="post_like(this.id)">
 							{% if like_user %}
@@ -201,9 +211,9 @@
 							<div class="main_detail__comment__contetns__profile_userinfo">
 								<div id="main_detail__comment__contents__img">
 									{% if comment.user.profile_img %}
-									<img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img" />
+									<img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
 									{% else %}
-									<img src="/static/img/moco_symbol.png" width="45px" alt="profile_img" />
+									<img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
 									{% endif %}
 								</div>
 								<div id="main_detail__comments__contents__info">
@@ -218,12 +228,11 @@
 							<div class="main_detail__comments__contents__options">
 								{% if comment.user == request.user %}
 								<div class="main_detail__comments_dropdown_btn">
-									<i class="fa-solid fa-ellipsis fa-lg" style="color: #bfbfbf"></i>
+									<i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
 								</div>
 								<div class="main_detail__comments_dropdown_menu">
 									<div class="main_detail__comments_dropdown_menu_revise">
-										<button
-											onclick="changeCmtForm({{comment.id}}, '{{comment.content}}'); return false;">수정</button>
+										<button onclick="changeForm({{comment.id}}, '{{comment.content}}');">수정</button>
 									</div>
 									<div class="main_detail__comments_dropdown_menu_delete">
 										<button onclick="onClickdelete({{comment.id}});">삭제</button>
@@ -236,24 +245,25 @@
 							<h1>{{comment.content}}</h1>
 						</div>
 						<div class="main_detail_comment_reply_btn">
-							<button onclick="createReCmt({{comment.id}});">답글</button>
+							<button onclick="changeForm2({{comment.id}});">답글</button>
 						</div>
 						<br />
 						<div class="main_detail_commnet_reply_form">
 							<div id="main_detail_comment_contents_reply_form__{{comment.id}}"></div>
 						</div>
-						<div id="main_detail__comment__contents__reply__{{comment.id}}">
+						<div id="main_detail__comment__contents__reply">
 							{% for recomment in comment.comment_set.all %}
 							<div class="main_detail__comment__contents__reply_bundle__{{recomment.id}}"
-								style="display: flex; justify-content: space-between">
+								style="display: flex; justify-content: space-between;">
 								<div>
 									<div class="main_detail__comment__contetns__profile_userinfo">
-										<span style="font-size: 1.25rem; font-weight: 600">ㄴ</span>
+										<span style="font-size:1.25rem; font-weight: 600;">ㄴ</span>
 										<div id="main_detail__comment__contents__img">
 											{% if recomment.user.profile_img %}
-											<img src="{{comment.user.profile_img.url}}" width="45px"
-												alt="profile_img" />
-											<img src="/static/img/moco_symbol.png" width="45px" alt="profile_img" />
+											<img src="{{recomment.user.profile_img.url}}" width="45px"
+												alt="profile_img"></img>
+											{% else %}
+											<img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
 											{% endif %}
 										</div>
 										<div id="main_detail__comments__contents__info">
@@ -265,23 +275,27 @@
 											</div>
 										</div>
 									</div>
-									<div class="reply_txt">{{recomment.content}}</div>
+									<div class="reply_txt">
+										{% if recomment.user != comment.user %}
+										<span style="color: #2253FF;">@{{comment.user.nickname}} </span>
+										{% endif %}
+										{{recomment.content}}
+									</div>
 								</div>
 								<div>
 									<div class="main_detail__comments__contents__options">
 										{% if recomment.user == request.user %}
 										<div class="main_detail__comments_revise_delete_btn">
 											<div class="main_detail__comments_dropdown_btn">
-												<i class="fa-solid fa-ellipsis fa-lg" style="color: #bfbfbf"></i>
+												<i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
 											</div>
 											<div class="main_detail__comments_dropdown_menu">
 												<div class="main_detail__comments_dropdown_menu_revise">
 													<button
-														onclick="changeReCmtForm({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
+														onclick="changeForm4({{recomment.id}}, '{{recomment.content}}');">수정</button>
 												</div>
 												<div class="main_detail__comments_dropdown_menu_delete">
-													<button
-														onclick="onClickdeleteRecmt({{comment.id}},{{recomment.id}});">삭제</button>
+													<button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
 												</div>
 											</div>
 										</div>
@@ -314,9 +328,8 @@
 						<label for="main_detail__review__upload_file">
 							<div id="main_detail__review__uploadbtn">
 								<h1>+</h1>
-								<p>
-									이미지를 드래그하거나
-									<br />
+								<p>이미지를 드래그하거나
+									<br>
 									클릭해서 업로드해주세요
 								</p>
 								{% if review.image.url %}
@@ -340,7 +353,8 @@
 				</div>
 			</form>
 			<div id="main_detail__review__contents">
-				{% for review in reviews %} {% if review.user == request.user %}
+				{% for review in reviews %}
+				{% if review.user == request.user %}
 				<div id="main_detail__review__contents_mine__{{review.id}}" class="main_detail__review__contents_mine">
 					<div id="main_detail__review__each__contents__{{review.id}}">
 						<div class="main_detail__review__contents_top">
@@ -348,9 +362,9 @@
 								<div class="review__contents_box__profile">
 									<div class="review__contents_box__profile_img">
 										{% if review.user.profile_img %}
-										<img src="{{review.user.profile_img.url}}" alt="profile_img" />
+										<img src="{{review.user.profile_img.url}}" alt="profile_img"></img>
 										{% else %}
-										<img src="/static/img/moco_symbol.png" alt="profile_img" />
+										<img src="/static/img/moco_symbol.png" alt="profile_img"></img>
 										{% endif %}
 									</div>
 									<div class="main_detail_review__contents_box__info">
@@ -375,7 +389,7 @@
 							<div class="main_detail__review__contents__options">
 								{% if review.user == request.user %}
 								<div class="main_detail__review_dropdown_btn">
-									<i class="fa-solid fa-ellipsis fa-2x" style="color: #bfbfbf"></i>
+									<i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
 								</div>
 								<div class="main_detail__review_dropdown_menu">
 									<div class="main_detail__review_dropdown_menu_revise">
@@ -388,7 +402,7 @@
 										{% endif %}
 									</div>
 									<div class="main_detail__review_dropdown_menu_delete">
-										<button onclick="onClickReviewDel({{review.id}})">삭제</button>
+										<button onclick="onClickdelete2({{review.id}})">삭제</button>
 									</div>
 								</div>
 								{% endif%}
@@ -398,9 +412,11 @@
 							{% if review.image %}
 							<img src="{{review.image.url}}" />
 							{% else %}
-							<img src="/static/img/image-solid.svg" alt="no_image" />
+							<img src="/static/img/image-solid.svg" alt="no_image"></img>
 							{% endif %}
-							<div class="main_detail__review__contents_text">{{review.content}}</div>
+							<div class="main_detail__review__contents_text">
+								{{review.content}}
+							</div>
 						</div>
 					</div>
 				</div>
@@ -413,9 +429,9 @@
 								<div class="review__contents_box__profile">
 									<div class="review__contents_box__profile_img">
 										{% if review.user.profile_img %}
-										<img src="{{review.user.profile_img.url}}" alt="profile_img" />
+										<img src="{{review.user.profile_img.url}}" alt="profile_img"></img>
 										{% else %}
-										<img src="/static/img/moco_symbol.png" alt="profile_img" />
+										<img src="/static/img/moco_symbol.png" alt="profile_img"></img>
 										{% endif %}
 									</div>
 									<div class="main_detail_review__contents_box__info">
@@ -440,7 +456,7 @@
 							<div class="main_detail__review__contents__options">
 								{% if review.user == request.user %}
 								<div class="main_detail__review_dropdown_btn">
-									<i class="fa-solid fa-ellipsis fa-2x" style="color: #bfbfbf"></i>
+									<i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
 								</div>
 								<div class="main_detail__review_dropdown_menu">
 									<div class="main_detail__review_dropdown_menu_revise">
@@ -453,7 +469,7 @@
 										{% endif %}
 									</div>
 									<div class="main_detail__review_dropdown_menu_delete">
-										<button onclick="onClickReviewDel({{review.id}})">삭제</button>
+										<button onclick="onClickdelete2({{review.id}})">삭제</button>
 									</div>
 								</div>
 								{% endif%}
@@ -463,21 +479,24 @@
 							{% if review.image %}
 							<img src="{{review.image.url}}" />
 							{% else %}
-							<img src="/static/img/image-solid.svg" alt="no_image" />
+							<img src="/static/img/image-solid.svg" alt="no_image"></img>
 							{% endif %}
-							<div class="main_detail__review__contents_text">{{review.content}}</div>
+							<div class="main_detail__review__contents_text">
+								{{review.content}}
+							</div>
 						</div>
 					</div>
 				</div>
-				{% endif %} {% endfor %}
+				{% endif %}
+				{% endfor %}
 			</div>
 			<div class="content-pagination">
-				<ul class="pagination justify-content-center" style="margin-top: 2rem">
+				<ul class="pagination justify-content-center" style="margin-top: 2rem;">
 					<!-- 이전페이지 -->
 					{% if reviews.has_previous %}
 					<li class="page-item">
 						<a class="page-link" href="?&page={{ reviews.previous_page_number }}"
-							style="color: #2253ff">이전</a>
+							style="color:#2253FF;">이전</a>
 						<!-- href로 뎁스 설정 -->
 					</li>
 					{% else %}
@@ -486,7 +505,8 @@
 					</li>
 					{% endif %}
 					<!-- 페이지리스트 -->
-					{% for page_number in reviews.paginator.page_range %} {% if page_number == reviews.number %}
+					{% for page_number in reviews.paginator.page_range %}
+					{% if page_number == reviews.number %}
 					<li class="page-item active" aria-current="page">
 						<a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
 					</li>
@@ -494,7 +514,8 @@
 					<li class="page-item">
 						<a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
 					</li>
-					{% endif %} {% endfor %}
+					{% endif %}
+					{% endfor %}
 					<!-- 다음페이지 -->
 					{% if reviews.has_next %}
 					<li class="page-item">
@@ -510,11 +531,13 @@
 		</div>
 		{%endif%}
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script>
-		const comModal = document.getElementById('main_detail__complete_modal');
-		const openComModal = document.getElementById('main_detail__complete_modal_btn');
-		openComModal.addEventListener('click', (e) => {
-			comModal.style.display = 'block';
+		const comModal = document.getElementById("main_detail__complete_modal");
+		const openComModal = document.getElementById("main_detail__complete_modal_btn");
+		openComModal.addEventListener("click", (e) => {
+			comModal.style.display = "block";
 		});
 
 		const closeComModal = comModal.querySelector(".main_detail__complete_modal__close_btn");
